@@ -1,6 +1,8 @@
 
 Version Next
 
+    - Bug fixes and tweaks to PersistentObject classes
+    - Added PersistentObject checking for "out-of-bound" updates
     - Added <dellroad:rpmdist> macro to macros.xml
     - Relax requirment for servlet 3.0 in SpringContextApplication
     - Added IdGenerator, IdMapper, and IdMappingMarshaller
